CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/Producto_del_Cliente__c.object-meta.xml
<CustomObject>
    <label>Producto del Cliente</label>
    <nameField>
        <label>Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos del Cliente</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>