CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/A_o__c.field-meta.xml
<CustomField>
    <fullName>A_o__c</fullName>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>