CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Area_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Area_Nectia__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Hogar</fullName>
            </value>
            <value>
                <fullName>Vida/Ahorro</fullName>
            </value>
            <value>
                <fullName>Vida/Protección</fullName>
            </value>
            <value>
                <fullName>APV</fullName>
            </value>
            <value>
                <fullName>Previsión</fullName>
            </value>
            <value>
                <fullName>Colectivos</fullName>
            </value>
            <value>
                <fullName>Otros Seguros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>