CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Autoriza_uso_de_datos__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_uso_de_datos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoriza uso de datos</label>
    <type>Checkbox</type>
</CustomField>