CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Banca_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Banca_Nectia__c</fullName>
    <label>Banca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personas</fullName>
            </value>
            <value>
                <fullName>Empresas</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Tipos de Banca</fullName>
                <isActive>false</isActive>
                <label>Tipos de Banca</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>