CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Canal_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Canal_Nectia__c</fullName>
    <label>Canal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>