CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Cliente_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Nectia__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Productos del Cliente</relationshipLabel>
    <relationshipName>Productos_de_cliente</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>