CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Codigo_Modulo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Modulo__c</fullName>
    <label>Código Módulo</label>
    <length>6</length>
    <type>Text</type>
</CustomField>