CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Codigo_Plan_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Plan_Nectia__c</fullName>
    <label>Código Plan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>