CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Correo_ejecutivo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Correo_ejecutivo_Nectia__c</fullName>
    <label>Correo ejecutivo</label>
    <type>Email</type>
</CustomField>