CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/CorreoEjecutivo__c.field-meta.xml
<CustomField>
    <fullName>CorreoEjecutivo__c</fullName>
    <formula>Cliente_Nectia__r.Owner.Email</formula>
    <label>Correo Ejecutivo</label>
    <type>Text</type>
</CustomField>