CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Cuotas_Pactadas__c.field-meta.xml
<CustomField>
    <fullName>Cuotas_Pactadas__c</fullName>
    <label>Cuotas Pactadas</label>
    <length>4</length>
    <type>Text</type>
</CustomField>