CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Descripcion_modulo__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_modulo__c</fullName>
    <label>Módulo</label>
    <length>60</length>
    <type>Text</type>
</CustomField>