CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Detalle_convenio__c.field-meta.xml
<CustomField>
    <fullName>Detalle_convenio__c</fullName>
    <label>Detalle convenio</label>
    <length>6</length>
    <type>Text</type>
</CustomField>