CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Direcci_n_riesgo__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_riesgo__c</fullName>
    <label>Dirección riesgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>