CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/E_Mail_Poliza__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Poliza__c</fullName>
    <label>E-Mail Poliza</label>
    <type>Email</type>
</CustomField>