CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Ejecutivo_comercial__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_comercial__c</fullName>
    <label>Ejecutivo comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>