CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Es_corredor__c.field-meta.xml
<CustomField>
    <fullName>Es_corredor__c</fullName>
    <label>Es corredor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>