CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Esquema_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Esquema_Nectia__c</fullName>
    <label>Esquema</label>
    <length>20</length>
    <type>Text</type>
</CustomField>