CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Estado_de_poliza_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_poliza_Nectia__c</fullName>
    <label>Estado de póliza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>No vigente</fullName>
            </value>
            <value>
                <fullName>Recaudada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>