CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Estado_de_Siniestro_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Siniestro_Nectia__c</fullName>
    <label>Estado de Siniestro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valores de estado de siniestro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>