CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Estado_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Nectia__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVA</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>CASTIGO</fullName>
            </value>
            <value>
                <fullName>FORWARD INGRESO</fullName>
            </value>
            <value>
                <fullName>FORWARD MODIFICADO</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>INGRESO</fullName>
            </value>
            <value>
                <fullName>MODIFICADO</fullName>
            </value>
            <value>
                <fullName>No Vigente</fullName>
            </value>
            <value>
                <fullName>VENCIDO</fullName>
            </value>
            <value>
                <fullName>VIGENTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>