CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Familia_del__c.field-meta.xml
<CustomField>
    <fullName>Familia_del__c</fullName>
    <formula>TEXT( Producto_de_Seguros_Nectia__r.Familia__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia</label>
    <type>Text</type>
</CustomField>