CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Fecha_de_cierre_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cierre_Nectia__c</fullName>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>