CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Fecha_de_pago_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_pago_Nectia__c</fullName>
    <label>Día de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>