CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Fecha_Emisi_n_Producto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Emisi_n_Producto__c</fullName>
    <label>Fecha Emisión Producto</label>
    <type>Date</type>
</CustomField>