CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Fecha_Expiraci_n_TC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Expiraci_n_TC__c</fullName>
    <label>Fecha Expiración TC</label>
    <type>Date</type>
</CustomField>