CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Fecha_vigencia_desde_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vigencia_desde_Nectia__c</fullName>
    <label>Fecha vigencia desde</label>
    <type>Date</type>
</CustomField>