CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/L_nea__c.field-meta.xml
<CustomField>
    <fullName>L_nea__c</fullName>
    <formula>TEXT(Producto_de_Seguros_Nectia__r.L_nea__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Línea</label>
    <type>Text</type>
</CustomField>