CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Mail_intermediario__c.field-meta.xml
<CustomField>
    <fullName>Mail_intermediario__c</fullName>
    <label>Mail intermediario</label>
    <type>Email</type>
</CustomField>