CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Mandato_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Mandato_Nectia__c</fullName>
    <label>Mandato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>No activo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>