CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Motivo_de_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cancelacion__c</fullName>
    <label>Motivo de cancelación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>