CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Motivo_de_cierre_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cierre_Nectia__c</fullName>
    <label>Motivo de cierre</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>