CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/N_de_siniestro_Nectia__c.field-meta.xml
<CustomField>
    <fullName>N_de_siniestro_Nectia__c</fullName>
    <label>N° de siniestro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>