CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Nombre_intermediario_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_intermediario_Nectia__c</fullName>
    <label>Nombre intermediario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>