CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/nombreAgencia__c.field-meta.xml
<CustomField>
    <fullName>nombreAgencia__c</fullName>
    <label>Nombre Agencia</label>
    <length>60</length>
    <type>Text</type>
</CustomField>