CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Numero_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Numero_Agencia__c</fullName>
    <label>Número Agencia</label>
    <length>6</length>
    <type>Text</type>
</CustomField>