CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Numero_Certificado_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Numero_Certificado_Nectia__c</fullName>
    <label>Número Certificado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>