CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Numero_de_convenio__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_convenio__c</fullName>
    <label>Número de convenio</label>
    <length>60</length>
    <type>Text</type>
</CustomField>