CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/numero_de_producto_sales__c.field-meta.xml
<CustomField>
    <fullName>numero_de_producto_sales__c</fullName>
    <description>Campo fórmula creado por everis para indicar el número de producto homologable para todos los negocios.</description>
    <formula>CASE( RecordType.Name ,
&quot;Producto cliente Corredora&quot;, TEXT(Producto_de_Corredora_Nectia__r.Codigo_de_producto_corredora__c),
&quot;Producto cliente Banco&quot;, Producto_de_Banco_Nectia__r.Id_Interno_Nectia__c,
&quot;Producto cliente Seguros&quot;, Producto_de_Seguros_Nectia__r.Codigo_de_Producto_nectia__c,
&quot;1&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Producto</label>
    <type>Text</type>
</CustomField>