CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Patente_auto_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Patente_auto_Nectia__c</fullName>
    <label>Patente auto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>