CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Periodicidad__c.field-meta.xml
<CustomField>
    <fullName>Periodicidad__c</fullName>
    <label>Periodicidad</label>
    <length>150</length>
    <type>Text</type>
</CustomField>