CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Poliza_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Poliza_Nectia__c</fullName>
    <externalId>true</externalId>
    <label>Nº Poliza</label>
    <length>100</length>
    <type>Text</type>
</CustomField>