CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Producto_de_Banco_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_Banco_Nectia__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Producto de Banco</label>
    <referenceTo>Producto_Banco__c</referenceTo>
    <relationshipLabel>Productos del Cliente</relationshipLabel>
    <relationshipName>Productos_de_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>