CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Producto_de_Corredora_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_Corredora_Nectia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de Corredora</label>
    <referenceTo>Producto_de_Corredora__c</referenceTo>
    <relationshipLabel>Productos del Cliente</relationshipLabel>
    <relationshipName>Productos_del_Cliente1</relationshipName>
    <type>Lookup</type>
</CustomField>