CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Productos_asociados__c.field-meta.xml
<CustomField>
    <fullName>Productos_asociados__c</fullName>
    <label>Productos asociados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acciones</fullName>
            </value>
            <value>
                <fullName>Fondos Mutuos</fullName>
            </value>
            <value>
                <fullName>Depósitos a Plazo</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>Fondos de Inversión</fullName>
            </value>
            <value>
                <fullName>Renta Fija</fullName>
            </value>
            <value>
                <fullName>Simultáneas</fullName>
            </value>
            <value>
                <fullName>Sitio News</fullName>
            </value>
            <value>
                <fullName>Profundidad de Mercado</fullName>
            </value>
            <value>
                <fullName>Alarmas</fullName>
            </value>
            <value>
                <fullName>Analisis Técnico</fullName>
            </value>
            <value>
                <fullName>Información de Mercado</fullName>
            </value>
            <value>
                <fullName>Servicio Emaling</fullName>
            </value>
            <value>
                <fullName>Pactos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>