CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Ramo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Ramo_Nectia__c</fullName>
    <label>Ramo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>