CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Rol_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Rol_Nectia__c</fullName>
    <label>Rol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contratante</fullName>
            </value>
            <value>
                <fullName>Asegurado</fullName>
            </value>
            <value>
                <fullName>Pagador</fullName>
            </value>
            <value>
                <fullName>Beneficiarios</fullName>
            </value>
            <value>
                <fullName>Causante</fullName>
            </value>
            <value>
                <fullName>Conyuge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>