CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Rut_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Rut_del_Cliente__c</fullName>
    <formula>Cliente_Nectia__r.RUT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rut del Cliente</label>
    <type>Text</type>
</CustomField>