CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Rut_ejecutivo_comercial__c.field-meta.xml
<CustomField>
    <fullName>Rut_ejecutivo_comercial__c</fullName>
    <label>Rut ejecutivo comercial</label>
    <length>16</length>
    <type>Text</type>
</CustomField>