CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/RUT_intermediario_Nectia__c.field-meta.xml
<CustomField>
    <fullName>RUT_intermediario_Nectia__c</fullName>
    <label>RUT intermediario</label>
    <length>12</length>
    <type>Text</type>
</CustomField>