CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Secuencia_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Secuencia_Nectia__c</fullName>
    <label>Secuencia</label>
    <length>2</length>
    <type>Text</type>
</CustomField>