CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Tarjeta_de_cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_de_cr_dito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de banco que marca si la cuenta asociada tiene tarjeta de crédito. Usado para validaciones.</description>
    <label>Tarjeta de crédito</label>
    <type>Checkbox</type>
</CustomField>