CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Telefono_Ejecutivo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Ejecutivo_Nectia__c</fullName>
    <label>Teléfono Ejecutivo</label>
    <type>Phone</type>
</CustomField>