CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Telefono_intermediario__c.field-meta.xml
<CustomField>
    <fullName>Telefono_intermediario__c</fullName>
    <label>Telefono intermediario</label>
    <type>Phone</type>
</CustomField>