CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/TelefonoEjecutivo__c.field-meta.xml
<CustomField>
    <fullName>TelefonoEjecutivo__c</fullName>
    <formula>Cliente_Nectia__r.Owner.Phone</formula>
    <label>Teléfono Ejecutivo</label>
    <type>Text</type>
</CustomField>