CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Tipo_de_siniestro_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_siniestro_Nectia__c</fullName>
    <label>Tipo de siniestro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valores de tipo de siniestro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>