CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Tipo_Registro_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Registro_Nectia__c</fullName>
    <label>Tipo Registro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>