CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Total_Prima__c.field-meta.xml
<CustomField>
    <fullName>Total_Prima__c</fullName>
    <label>Total Prima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>