CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/fields/Via_de_pago_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Via_de_pago_Nectia__c</fullName>
    <label>Vía de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>PAT</fullName>
            </value>
            <value>
                <fullName>Aviso Cobranza</fullName>
            </value>
            <value>
                <fullName>Cuponera</fullName>
            </value>
            <value>
                <fullName>Descuento Planilla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>