CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/recordTypes/Producto_cliente_Banco.recordType-meta.xml
<RecordType>
    <fullName>Producto_cliente_Banco</fullName>
    <active>true</active>
    <label>Producto cliente Banco</label>
</RecordType>