CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/recordTypes/Producto_cliente_Corredora.recordType-meta.xml
<RecordType>
    <fullName>Producto_cliente_Corredora</fullName>
    <active>true</active>
    <label>Producto cliente Corredora</label>
</RecordType>