CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/recordTypes/Producto_cliente_Seguros.recordType-meta.xml
<RecordType>
    <fullName>Producto_cliente_Seguros</fullName>
    <active>true</active>
    <label>Producto cliente Seguros</label>
</RecordType>