CNSDEVCOLECT/force-app/main/default/objects/Producto_del_Cliente__c/listViews/Productos_Inversiones_Corredora.listView-meta.xml
<ListView>
    <fullName>Productos_Inversiones_Corredora</fullName>
    <columns>NAME</columns>
    <columns>Cliente_Nectia__c</columns>
    <columns>Secuencia_Nectia__c</columns>
    <columns>Producto_de_Corredora_Nectia__c</columns>
    <columns>Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Producto_del_Cliente__c.Producto_cliente_Corredora</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Inversiones</value>
    </filters>
    <label>Productos Inversiones Corredora</label>
</ListView>